--- a/app/src/main/res/layout/activity_inici.xml
+++ b/app/src/main/res/layout/activity_inici.xml
@@ -19,13 +19,13 @@
         android:id="@+id/iniciarSesionbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="INICIAR SESION"/>
+        android:text="INICIAR SESIO"/>
 
     <Button
         android:id="@+id/registroBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="REGISTRO"/>
+        android:text="REGISTRE"/>
 
     <LinearLayout
         android:layout_marginTop="50dp"
